--- a/pages/19562.html
+++ b/pages/19562.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      connective cover in nLab
+      universal higher central extension in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      connective cover
+      universal higher central extension
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5906/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8802/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,130 +311,141 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='stable_homotopy_theory'>Stable Homotopy theory</h4>
+<h4 id='higher_algebra'>Higher algebra</h4>
 
-<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a></strong></p><ul>
-<li><a class='existingWikiWord' href='/nlab/show/homological+algebra'>homological algebra</a>, <a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></li>
-</ul><p><em><a class='existingWikiWord' href='/nlab/show/Introduction+to+Stable+Homotopy+Theory'>Introduction</a></em></p><h1 id='ingredients'>Ingredients</h1><ul>
-<li><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a></li>
-</ul><h1 id='contents'>Contents</h1><ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/loop+space+object'>loop space object</a></p>
-</li>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></strong></p><p><a class='existingWikiWord' href='/nlab/show/universal+algebra'>universal algebra</a></p><h2 id='algebraic_theories'>Algebraic theories</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theory'>algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/2-algebraic+theory'>2-algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory'>(∞,1)-algebraic theory</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/monad'>monad</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-monad'>(∞,1)-monad</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/operad'>operad</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-operad'>(∞,1)-operad</a></p>
+</li><h2 id='algebras_and_modules'>Algebras and modules</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+a+monad'>algebra over a monad</a></p>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/suspension+object'>suspension object</a></p>
-</li>
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-algebra+over+an+%28%E2%88%9E%2C1%29-monad'>∞-algebra over an (∞,1)-monad</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+an+algebraic+theory'>algebra over an algebraic theory</a></p>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/looping+and+delooping'>looping and delooping</a></p>
-</li>
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-algebra+over+an+%28%E2%88%9E%2C1%29-algebraic+theory'>∞-algebra over an (∞,1)-algebraic theory</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebra over an operad</a></p>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/stable+%28%E2%88%9E%2C1%29-category'>stable (∞,1)-category</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/stabilization'>stabilization</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/spectrum+object'>spectrum object</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/stable+derivator'>stable derivator</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/triangulated+category'>triangulated category</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/stable+%28%E2%88%9E%2C1%29-category+of+spectra'>stable (∞,1)-category of spectra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-algebra+over+an+%28%E2%88%9E%2C1%29-operad'>∞-algebra over an (∞,1)-operad</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/action'>action</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-action'>∞-action</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-representation'>∞-representation</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/module'>module</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-module'>∞-module</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/associated+bundle'>associated bundle</a>, <a class='existingWikiWord' href='/nlab/show/associated+%E2%88%9E-bundle'>associated ∞-bundle</a></p>
+</li><h2 id='higher_algebras'>Higher algebras</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category'>monoidal (∞,1)-category</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28%E2%88%9E%2C1%29-category'>symmetric monoidal (∞,1)-category</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/stable+homotopy+category'>stable homotopy category</a></p>
-</li>
-</ul>
+<p><a class='existingWikiWord' href='/nlab/show/monoid+in+an+%28%E2%88%9E%2C1%29-category'>monoid in an (∞,1)-category</a></p>
 </li>
 
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+an+%28%E2%88%9E%2C1%29-category'>commutative monoid in an (∞,1)-category</a></p>
+</li>
+</ul>
+</li><li>
+<p>symmetric monoidal (∞,1)-category of spectra</p>
+
+<ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/smash+product+of+spectra'>smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+smash+product+of+spectra'>symmetric monoidal smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a>, <a class='existingWikiWord' href='/nlab/show/module+spectrum'>module spectrum</a>, <a class='existingWikiWord' href='/nlab/show/algebra+spectrum'>algebra spectrum</a></p>
+</li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/A-%E2%88%9E+algebra'>A-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/A-%E2%88%9E+ring'>A-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/A-%E2%88%9E+space'>A-∞ space</a></li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/C-%E2%88%9E+algebra'>C-∞ algebra</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+ring'>E-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+algebra'>E-∞ algebra</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/symmetric+smash+product+of+spectra'>symmetric smash product of spectra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-module'>∞-module</a>, <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-module+bundle'>(∞,1)-module bundle</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Spanier-Whitehead+duality'>Spanier-Whitehead duality</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/A-%E2%88%9E+ring'>A-∞ ring</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+ring'>E-∞ ring</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/multiplicative+cohomology+theory'>multiplicative cohomology theory</a></p>
 </li>
 </ul>
-</li>
-</ul><div>
-<p>
-  <a href='/nlab/edit/stable+homotopy+theory+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/L-%E2%88%9E+algebra'>L-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/deformation+theory'>deformation theory</a></li>
+</ul>
+</li><h2 id='model_category_presentations'>Model category presentations</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+T-algebras'>model structure on simplicial T-algebras</a> / <a class='existingWikiWord' href='/nlab/show/homotopy+T-algebra'>homotopy T-algebra</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+operads'>model structure on operads</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+algebras+over+an+operad'>model structure on algebras over an operad</a></p>
+</li><h2 id='geometry_on_formal_duals_of_algebras'>Geometry on formal duals of algebras</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived geometry</a></p>
+</li><h2 id='theorems'>Theorems</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/Deligne+conjecture'>Deligne conjecture</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/delooping+hypothesis'>delooping hypothesis</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+Dold-Kan+correspondence'>monoidal Dold-Kan correspondence</a></p>
+</li><div></div><p>
+  <a href='/nlab/edit/higher+algebra+-+contents'>Edit this sidebar</a>
+</p></div>
 </div>
 </div><h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
-</p><h2 id='idea'>Idea</h2><p><a class='existingWikiWord' href='/nlab/show/connective+spectrum'>Connective spectra</a> form a <a class='existingWikiWord' href='/nlab/show/coreflective+sub-%28%E2%88%9E%2C1%29-category'>coreflective sub-(∞,1)-category</a> of the <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-category+of+spectra'>(∞,1)-category of spectra</a>. The <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right</a> <a class='existingWikiWord' href='/nlab/show/adjoint+%28%E2%88%9E%2C1%29-functor'>adjoint (∞,1)-functor</a> from spectra to connective spectra is called the <em><a class='existingWikiWord' href='/nlab/show/connective+cover'>connective cover</a></em> construction.</p><p>The analogous statement holds true for <a class='existingWikiWord' href='/nlab/show/module+spectra'>module spectra</a> and for <a class='existingWikiWord' href='/nlab/show/algebra+spectra'>algebra spectra</a> (<a href='#BakerRichter05'>Baker-Richter 05</a>, <a href='#Lurie'>Lurie, prop. 7.1.3.13</a>)</p><h2 id='related_concepts'>Related concepts</h2><ul>
-<li><a class='existingWikiWord' href='/nlab/show/n-connected+object+of+an+%28infinity%2C1%29-topos'>n-connected object of an (infinity,1)-topos</a></li>
-</ul><h2 id='references'>References</h2><ul>
-<li id='Schwede12'>
-<p><a class='existingWikiWord' href='/nlab/show/Stefan+Schwede'>Stefan Schwede</a>, chapzer II, section 8, and chapter III, section 7 of <em><a class='existingWikiWord' href='/nlab/show/Symmetric+spectra'>Symmetric spectra</a></em> (2012)</p>
-</li>
-
-<li id='BakerRichter05'>
-<p><a class='existingWikiWord' href='/nlab/show/Andrew+Baker'>Andrew Baker</a>, <a class='existingWikiWord' href='/nlab/show/Birgit+Richter'>Birgit Richter</a>, <em>Uniqueness of <math class='maruku-mathml' display='inline' id='mathml_9941ec1a0c47d6c5abca2bf6f72a60f0f179dc98_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-structures for connective covers</em> (<a href='http://arxiv.org/abs/math/0506422'>arXiv:math/0506422v2</a>)</p>
-</li>
-
-<li id='Lurie'>
-<p><a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, <em><a class='existingWikiWord' href='/nlab/show/Higher+Algebra'>Higher Algebra</a></em></p>
-</li>
+</p><h2 id='idea'>Idea</h2><p>In any context of <a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a> where <a class='existingWikiWord' href='/nlab/show/higher+central+extension'>higher central extension</a> make sense, one may ask for the <em>universal</em> such. Since an ordinary <a class='existingWikiWord' href='/nlab/show/central+extension'>central extension</a> of some algebraic object is characterized as the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a> in the <a class='existingWikiWord' href='/nlab/show/category'>category</a> of all its central extensions, an evident definition of universal higher central extension is as a suitable initial object in a <a class='existingWikiWord' href='/nlab/show/higher+category'>higher category</a> of <a class='existingWikiWord' href='/nlab/show/higher+central+extensions'>higher central extensions</a>.</p><p>For higher central extensions in the context of <a class='existingWikiWord' href='/nlab/show/discrete+infinity-groupoid'>discrete</a> <a class='existingWikiWord' href='/nlab/show/2-groups'>2-groups</a> this is considered in <a href='#EpaGanter16'>Epa-Ganter 16, Def. 2.4</a></p><h2 id='references'>References</h2><ul>
+<li id='EpaGanter16'><a class='existingWikiWord' href='/nlab/show/Narthana+Epa'>Narthana Epa</a>, <a class='existingWikiWord' href='/nlab/show/Nora+Ganter'>Nora Ganter</a>, <em>Platonic and alternating 2-groups</em>, Higher Structures 1(1):122-146, 2017. (<a href='http://arxiv.org/abs/1605.09192'>arXiv:1605.09192</a>)</li>
 </ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 31, 2018 at 05:49:22.
-  See the <a href="https://ncatlab.org/nlab/history/connective cover" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 31, 2018 at 05:05:33.
+  See the <a href="https://ncatlab.org/nlab/history/universal higher central extension" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/connective+cover" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/connective+cover/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/connective+cover" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/connective+cover" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/connective cover/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/universal+higher+central+extension" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/universal higher central extension/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/connective+cover" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/universal+higher+central+extension" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/connective+cover" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/universal+higher+central+extension" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/connective+cover" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/universal+higher+central+extension" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
