--- a/pages/17360.html
+++ b/pages/17360.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1532905248" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1532905248" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8365/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,44 +307,41 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#homotopy_groups'>Homotopy groups</a></li></ul></div>
-<h2 id='definition'>Definition</h2>
-
-<p>We shall make use of notions introduced at <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a>, and of the notation of this page.</p>
-
-<div class='num_defn'>
+      <h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
+<ul>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#homotopy_groups'>Homotopy groups</a></li>
+</ul>
+</div>
+</p><h2 id='definition'>Definition</h2><p>We shall make use of notions introduced at <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a>, and of the notation of this page.</p><div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/cubical+Kan+complex'>cubical Kan complex</a> is a <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> <math class='maruku-mathml' display='inline' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> equipped with the following structure: for every integer <math class='maruku-mathml' display='inline' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>n \geq 1</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>1 \leq i \leq n</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>≤</mo><mi>ϵ</mi><mo>≤</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>0 \leq \epsilon \leq 1</annotation></semantics></math>, and every morphism <math class='maruku-mathml' display='inline' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>f : \sqcap^{n,i,\epsilon} \rightarrow X</annotation></semantics></math> of cubical sets, there is a morphism <math class='maruku-mathml' display='inline' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><msup><mo>□</mo> <mi>n</mi></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>g : \square^{n} \rightarrow X</annotation></semantics></math> of cubical sets such that the following diagram in <math class='maruku-mathml' display='inline' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='sans-serif'><mi>Set</mi></mstyle> <mrow><msup><mo>□</mo> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathsf{Set}^{\square^{op}}</annotation></semantics></math> commutes.</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4fc56af9146a09a19fef0824d03e083ebbfffe7f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup></mtd> <mtd></mtd> <mtd></mtd></mtr> <mtr><mtd><mpadded lspace='-100%width' width='0'><mrow><msub><mi>i</mi> <mrow><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msub></mrow></mpadded><mo stretchy='false'>↓</mo></mtd> <mtd><mover><mo>↘</mo><mi>f</mi></mover></mtd> <mtd></mtd></mtr> <mtr><mtd><msup><mo>□</mo> <mi>n</mi></msup></mtd> <mtd><munder><mo>→</mo><mi>g</mi></munder></mtd> <mtd><mi>X</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<p>A <a class='existingWikiWord' href='/nlab/show/cubical+Kan+complex'>cubical Kan complex</a> is a <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> <math class='maruku-mathml' display='inline' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> equipped with the following structure: for every integer <math class='maruku-mathml' display='inline' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>n \geq 1</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>1 \leq i \leq n</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>≤</mo><mi>ϵ</mi><mo>≤</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>0 \leq \epsilon \leq 1</annotation></semantics></math>, and every morphism <math class='maruku-mathml' display='inline' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>f : \sqcap^{n,i,\epsilon} \rightarrow X</annotation></semantics></math> of cubical sets, there is a morphism <math class='maruku-mathml' display='inline' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><msup><mo>□</mo> <mi>n</mi></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>g : \square^{n} \rightarrow X</annotation></semantics></math> of cubical sets such that the following diagram in <math class='maruku-mathml' display='inline' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='sans-serif'><mi>Set</mi></mstyle> <mrow><msup><mo>□</mo> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathsf{Set}^{\square^{op}}</annotation></semantics></math> commutes.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ae6a9bd2df3d4b05b8286711ccc7211c5535c33e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup></mtd> <mtd></mtd> <mtd></mtd></mtr> <mtr><mtd><mpadded lspace='-100%width' width='0'><mrow><msub><mi>i</mi> <mrow><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msub></mrow></mpadded><mo stretchy='false'>↓</mo></mtd> <mtd><mover><mo>↘</mo><mi>f</mi></mover></mtd> <mtd></mtd></mtr> <mtr><mtd><msup><mo>□</mo> <mi>n</mi></msup></mtd> <mtd><munder><mo>→</mo><mi>g</mi></munder></mtd> <mtd><mi>X</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
    \array{
       \sqcap^{n,i,\epsilon}                         &amp;                                            &amp; \\
       \mathllap{i_{i,\epsilon}} \downarrow  &amp; \overset{f}{\searrow}    &amp; \\
       \square^{n}                        &amp; \underset{g}{\rightarrow} &amp; X
    }
 
-</annotation></semantics></math></div></div>
-
-<h2 id='homotopy_groups'>Homotopy groups</h2>
-
-<p>Cubical Kan complexes admit a notion of homotopy group. The theory of these homotopy groups can be developed analogously to the theory of homotopy groups of a topological space. See <a class='existingWikiWord' href='/nlab/show/homotopy+groups+of+a+cubical+Kan+complex'>homotopy groups of a cubical Kan complex</a>.</p>
+</annotation></semantics></math></div></div><h2 id='homotopy_groups'>Homotopy groups</h2><p>Cubical Kan complexes admit a notion of homotopy group. The theory of these homotopy groups can be developed analogously to the theory of homotopy groups of a topological space. See <a class='existingWikiWord' href='/nlab/show/homotopy+groups+of+a+cubical+Kan+complex'>homotopy groups of a cubical Kan complex</a>.</p><p><span class='newWikiWord'>a test_redirect<a href='/nlab/new/a+test_redirect'>?</a></span></p>
 </div>
 
 <div class="revisedby">
-  Revised on April  1, 2018 14:59:47 
-  by <a class="existingWikiWord" href="/nlab/show/Richard+Williamson">Richard Williamson</a>
-  (84.202.247.109)
+  <p>
+  Last revised on July 31, 2018 at 06:38:19.
+  See the <a href="https://ncatlab.org/nlab/history/cubical Kan complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cubical+Kan+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+Kan+complex/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/cubical+Kan+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+Kan+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/cubical+Kan+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+Kan+complex/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/cubical+Kan+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+Kan+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/cubical Kan complex/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/cubical+Kan+complex" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/cubical+Kan+complex" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/cubical+Kan+complex" id="view_source" rel="nofollow">Source</a>
