--- a/pages/17922.html
+++ b/pages/17922.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1532905248" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1532905248" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,31 +307,24 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#the_canonical_super_vielbein'>The canonical super vielbein</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>A <em>super vielbein</em> is the analogue of a <em><a class='existingWikiWord' href='/nlab/show/vielbein'>vielbein</a></em> in <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>.</p>
-
-<h2 id='the_canonical_super_vielbein'>The canonical super vielbein</h2>
-
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_e87a551820bef493d59b84390cc61c9d29e288c9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>real spin representation</a> and let <math class='maruku-mathml' display='inline' id='mathml_e87a551820bef493d59b84390cc61c9d29e288c9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo>,</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(x^a, \theta^\alpha)</annotation></semantics></math> be the canonical <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> on the <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a> <math class='maruku-mathml' display='inline' id='mathml_e87a551820bef493d59b84390cc61c9d29e288c9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>|</mo><mi>N</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{d-1,1\vert N}</annotation></semantics></math> underlying the <a class='existingWikiWord' href='/nlab/show/super+Minkowski+spacetime'>super Minkowski spacetime</a> super translation group. Then the canonical super vielbein is the <math class='maruku-mathml' display='inline' id='mathml_e87a551820bef493d59b84390cc61c9d29e288c9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>|</mo><mi>N</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{d-1,1\vert N}</annotation></semantics></math>-valued <a class='existingWikiWord' href='/nlab/show/differential+form+on+a+supermanifold'>super differential form</a> with components</p>
-
+      <h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
 <ul>
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_e87a551820bef493d59b84390cc61c9d29e288c9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ψ</mi> <mi>α</mi></msup><mo>≔</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>θ</mi> <mi>α</mi></msup></mrow><annotation encoding='application/x-tex'>\psi^\alpha \coloneqq \mathbf{d} \theta^\alpha</annotation></semantics></math>.</p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_e87a551820bef493d59b84390cc61c9d29e288c9_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>e</mi> <mi>a</mi></msup><mo>≔</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>x</mi> <mi>a</mi></msup><mo>+</mo><mover><mi>θ</mi><mo>¯</mo></mover><msup><mi>Γ</mi> <mi>a</mi></msup><mstyle mathvariant='bold'><mi>d</mi></mstyle><mi>θ</mi></mrow><annotation encoding='application/x-tex'>e^a \coloneqq \mathbf{d} x^a + \overline{\theta} \Gamma^a \mathbf{d} \theta</annotation></semantics></math>.</p>
-</li>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#the_canonical_super_vielbein'>The canonical super vielbein</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
 </ul>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
+</div>
+</p><h2 id='idea'>Idea</h2><p>A <em>super vielbein</em> is the analogue of a <em><a class='existingWikiWord' href='/nlab/show/vielbein'>vielbein</a></em> in <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>.</p><h2 id='the_canonical_super_vielbein'>The canonical super vielbein</h2><p>Let <math class='maruku-mathml' display='inline' id='mathml_09cfc77f281afb379eb7aea944824870e64e3f63_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/real+spin+representation'>real spin representation</a> and let <math class='maruku-mathml' display='inline' id='mathml_09cfc77f281afb379eb7aea944824870e64e3f63_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo>,</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(x^a, \theta^\alpha)</annotation></semantics></math> be the canonical <a class='existingWikiWord' href='/nlab/show/coordinates'>coordinates</a> on the <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a> <math class='maruku-mathml' display='inline' id='mathml_09cfc77f281afb379eb7aea944824870e64e3f63_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>|</mo><mi>N</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{d-1,1\vert N}</annotation></semantics></math> underlying the <a class='existingWikiWord' href='/nlab/show/super+Minkowski+spacetime'>super Minkowski spacetime</a> super translation group. Then the canonical super vielbein is the <math class='maruku-mathml' display='inline' id='mathml_09cfc77f281afb379eb7aea944824870e64e3f63_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>|</mo><mi>N</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{d-1,1\vert N}</annotation></semantics></math>-valued <a class='existingWikiWord' href='/nlab/show/super+differential+form'>super differential form</a> with components</p><ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super-Cartan+geometry'>super Cartan geometry</a></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_09cfc77f281afb379eb7aea944824870e64e3f63_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ψ</mi> <mi>α</mi></msup><mo>≔</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>θ</mi> <mi>α</mi></msup></mrow><annotation encoding='application/x-tex'>\psi^\alpha \coloneqq \mathbf{d} \theta^\alpha</annotation></semantics></math>.</p>
+</li>
+
+<li>
+<p><math class='maruku-mathml' display='inline' id='mathml_09cfc77f281afb379eb7aea944824870e64e3f63_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>e</mi> <mi>a</mi></msup><mo>≔</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>x</mi> <mi>a</mi></msup><mo>+</mo><mover><mi>θ</mi><mo>¯</mo></mover><msup><mi>Γ</mi> <mi>a</mi></msup><mstyle mathvariant='bold'><mi>d</mi></mstyle><mi>θ</mi></mrow><annotation encoding='application/x-tex'>e^a \coloneqq \mathbf{d} x^a + \overline{\theta} \Gamma^a \mathbf{d} \theta</annotation></semantics></math>.</p>
+</li>
+</ul><h2 id='related_concepts'>Related concepts</h2><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+Cartan+geometry'>super Cartan geometry</a></p>
 </li>
 
 <li>
@@ -340,48 +332,30 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/supertorsion'>super-torsion</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super-torsion'>super-torsion</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+supersymmetry'>geometry of physics -- supersymmetry</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+supersymmetry'>geometry of physics – supersymmetry</a></p>
 </li>
 </ul>
-
-<p>
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Created on January 10, 2017 09:38:10 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  <p>
+  Last revised on July 31, 2018 at 10:24:59.
+  See the <a href="https://ncatlab.org/nlab/history/super vielbein" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/super+vielbein" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/super+vielbein" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+vielbein/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/super+vielbein" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+vielbein" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/super vielbein/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/super+vielbein" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/super+vielbein" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/super+vielbein" id="view_source" rel="nofollow">Source</a>
