--- a/pages/19580.html
+++ b/pages/19580.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      standard model of fundamental physics - table in nLab
+      asymptotic boundary in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      standard model of fundamental physics - table
+      asymptotic boundary
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4671/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8816/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,32 +307,53 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>and cosmology</a></strong></p>
-<table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a>:</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills+theory'>Yang-Mills</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac+theory'>Dirac</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac-Higgs+theory'>Higgs</a></th></tr></thead><tbody><tr><td style='text-align: left;'></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak</a> and <a class='existingWikiWord' href='/nlab/show/strong+nuclear+force'>strong nuclear force</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/matter'>matter</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a></td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> content:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/vielbein+field'>vielbein field</a> <math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/principal+connection'>principal connection</a> <math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo></mrow><annotation encoding='application/x-tex'>\nabla</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/spinor'>spinor</a> <math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> <math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math></td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Lagrangian'>Lagrangian</a>:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a> density</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+strength'>field strength</a> squared</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a> component density</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+strength'>field strength</a> squared + potential density</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>=</mo></mrow><annotation encoding='application/x-tex'>L = </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>R(e) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>F</mi> <mo>∇</mo></msub><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><msub><mi>F</mi> <mo>∇</mo></msub><mo stretchy='false'>⟩</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>\langle F_\nabla \wedge \star_e F_\nabla\rangle + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ψ</mi><mo>,</mo><msub><mi>D</mi> <mrow><mo stretchy='false'>(</mo><mi>e</mi><mo>,</mo><mo>∇</mo><mo stretchy='false'>)</mo></mrow></msub><mi>ψ</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'> (\psi , D_{(e,\nabla)} \psi) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_fe1ab21b0c4e83aef0f095e4781c7e48fbcdb78f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo><mover><mi>H</mi><mo stretchy='false'>¯</mo></mover><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><mo>∇</mo><mi>H</mi><mo>+</mo><mrow><mo>(</mo><mi>λ</mi><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>4</mn></msup><mo>−</mo><msup><mi>μ</mi> <mn>2</mn></msup><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup><mo>)</mo></mrow><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'> \nabla \bar H \wedge \star_e \nabla H  + \left(\lambda  {\vert H\vert}^4 - \mu^2 {\vert H\vert}^2 \right) vol(e) </annotation></semantics></math></td></tr>
-</tbody></table>
+      <h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/boundary'>boundary</a>, <a class='existingWikiWord' href='/nlab/show/manifold+with+boundary'>manifold with boundary</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/asymptotic+isometry'>asymptotic isometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/black+brane'>black brane</a>, <a class='existingWikiWord' href='/nlab/show/near+horizon+geometry'>near horizon geometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/AdS-CFT+duality'>AdS-CFT duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/singleton+representation'>singleton representation</a></p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August  3, 2018 at 12:13:37.
-  See the <a href="https://ncatlab.org/nlab/history/standard model of fundamental physics - table" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August  3, 2018 at 12:24:41.
+  See the <a href="https://ncatlab.org/nlab/history/asymptotic boundary" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/standard+model+of+fundamental+physics+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+fundamental+physics+-+table/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/standard+model+of+fundamental+physics+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+fundamental+physics+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/standard model of fundamental physics - table/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/asymptotic+boundary" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/asymptotic boundary/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/standard+model+of+fundamental+physics+-+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/asymptotic+boundary" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/standard+model+of+fundamental+physics+-+table" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/asymptotic+boundary" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/standard+model+of+fundamental+physics+-+table" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/asymptotic+boundary" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
